# github-actions-example

./: .gitignore  CHANGELOG.md  Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: builddockerimage.yml  bumpversion-dev.yml  bumpversion.yml  createrelease.yml  publishdocker.yml  pythonpackage.yml
primes/: __init__.py  __main__.py  primes.py
tests/: test_primes.py
