[tool.poetry]
name = "github-actions-example"
version = "0.1.0"
description = ""
authors = ["Fernando Martínez González <frndmartinezglez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[tool.commitizen]
version = "0.1.6"
version_files = [
    "primes/__init__.py",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

